--- a/web/package.json
+++ b/web/package.json
@@ -134,6 +134,7 @@
     "prr": "1.0.1",
     "renamer": "^2.0.1",
     "rxjs": "^7.5.4",
+    "semver": "^7.1.2",
     "shx": "^0.3.4",
     "sinon": "^2.4.1",
     "strip-bom": "^3.0.0",
