--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -42,7 +42,7 @@
     "loglevel": "^1.4.1",
     "minimist": "^1.2.0",
     "protobufjs": "6.11.3",
-    "protobufjs-cli": "1.0.2",
+    "semver": "^7.1.2",
     "rxjs": "^7.5.4",
     "strip-bom": "^3.0.0",
     "ws": "^3.2.0"
