Add protobuf-cli deps to electron-launcher (3)

--- a/web/package.json
+++ b/web/package.json
@@ -83,6 +83,7 @@
     "electron-log": "^2.2.9",
     "electron-mocha": "^11.0.2",
     "electron-packager": "^16.0.0",
+    "escodegen": "^1.14.3",
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -91,7 +92,7 @@
     "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-jsdoc": "^39.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "espree": "^3.4.3",
+    "espree": "^3.5.4",
     "get-port": "^5.1.1",
     "glob": "^7.2.0",
     "glob-to-regexp": "^0.4.1",
@@ -99,6 +100,7 @@
     "http-server": "^14.1.0",
     "husky": "^7.0.4",
     "if-env": "^1.0.4",
+    "installing": "^1.0.0",
     "is-ci": "^3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-reporters": "^2.2.0",
@@ -106,6 +108,7 @@
     "jest": "^27.5.1",
     "jest-jasmine2": "^27.5.1",
     "jest-preset-angular": "^11.1.0",
+    "jsdoc": "^3.6.11",
     "karma": "^6.3.17",
     "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "~1.0.1",
@@ -143,6 +146,7 @@
     "ts-node": "~3.2.0",
     "tslib": "^2.3.1",
     "typescript": "~4.4.4",
+    "uglify-js": "^3.17.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
