--- a/web/packages/cli/package.json
+++ b/web/packages/cli/package.json
@@ -29,7 +29,8 @@
     "commander": "^4.0.0",
     "fs-extra": "5.0.0",
     "progress": "2.0.0",
-    "protobufjs": "6.11.3",
+    "protobufjs": "7.1.2",
+    "protobufjs-cli": "1.0.2",
     "request": "2.88.0",
     "tar": "4.4.18",
     "tar-fs": "1.16.2",
