--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -34,11 +34,11 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
-    "@plexus-interop/client": "file:../client",
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/protocol": "file:../protocol",
-    "@plexus-interop/transport-common": "file:../transport-common",
-    "@plexus-interop/websocket-transport": "file:../websocket-transport",
+    "@plexus-interop/client": "0.1.0",
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/protocol": "0.1.0",
+    "@plexus-interop/transport-common": "0.1.0",
+    "@plexus-interop/websocket-transport": "0.1.0",
     "loglevel": "^1.4.1",
     "minimist": "^1.2.0",
     "protobufjs": "6.11.3",
