--- a/web/packages/io/package.json
+++ b/web/packages/io/package.json
@@ -24,9 +24,9 @@
     "test": "npm run unit"
   },
   "dependencies": {
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/metadata": "file:../metadata",
-    "@plexus-interop/protocol": "file:../protocol",
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/metadata": "0.1.0",
+    "@plexus-interop/protocol": "0.1.0",
     "protobufjs": "6.11.3"
   },
   "publishConfig": {
