--- a/web/packages/web-example/package.json
+++ b/web/packages/web-example/package.json
@@ -24,10 +24,10 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@plexus-interop/client": "file:../client",
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/transport-common": "file:../transport-common",
-    "@plexus-interop/websocket-transport": "file:../websocket-transport",
+    "@plexus-interop/client": "0.1.0",
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/transport-common": "0.1.0",
+    "@plexus-interop/websocket-transport": "0.1.0",
     "protobufjs": "6.11.3"
   }
 }
