--- a/web/lerna.json
+++ b/web/lerna.json
@@ -2,12 +2,10 @@
   "packages": ["packages/*"],
   "npmClient": "npm",
   "version": "0.1.0",
+  "useWorkspaces": true,
   "command": {
     "init": {
       "exact": true
-    },
-    "bootstrap": {
-      "hoist": false
     },
     "version": {
       "exact": true,
@@ -21,5 +19,7 @@
       "fromPackage": true,
       "verifyAccess": false
     }
-  }
+  },
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "useNx": false
 }
