--- a/web/packages/broker/package.json
+++ b/web/packages/broker/package.json
@@ -24,12 +24,12 @@
     "test": "jest --coverage --passWithNoTests"
   },
   "dependencies": {
-    "@plexus-interop/client": "file:../client",
-    "@plexus-interop/client-api": "file:../client-api",
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/metadata": "file:../metadata",
-    "@plexus-interop/protocol": "file:../protocol",
-    "@plexus-interop/transport-common": "file:../transport-common",
+    "@plexus-interop/client": "0.1.0",
+    "@plexus-interop/client-api": "0.1.0",
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/metadata": "0.1.0",
+    "@plexus-interop/protocol": "0.1.0",
+    "@plexus-interop/transport-common": "0.1.0",
     "long": "^4.0.0",
     "protobufjs": "6.11.3",
     "reflect-metadata": "^0.1.10",
