--- a/web/packages/common-api-impl/package.json
+++ b/web/packages/common-api-impl/package.json
@@ -24,15 +24,15 @@
     "test": "jest --coverage --passWithNoTests"
   },
   "dependencies": {
-    "@plexus-interop/client": "file:../client",
-    "@plexus-interop/client-api": "file:../client-api",
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/io": "file:../io",
-    "@plexus-interop/metadata": "file:../metadata",
-    "@plexus-interop/protocol": "file:../protocol",
-    "@plexus-interop/remote": "file:../remote",
-    "@plexus-interop/transport-common": "file:../transport-common",
-    "@plexus-interop/websocket-transport": "file:../websocket-transport",
+    "@plexus-interop/client": "0.1.0",
+    "@plexus-interop/client-api": "0.1.0",
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/io": "0.1.0",
+    "@plexus-interop/metadata": "0.1.0",
+    "@plexus-interop/protocol": "0.1.0",
+    "@plexus-interop/remote": "0.1.0",
+    "@plexus-interop/transport-common": "0.1.0",
+    "@plexus-interop/websocket-transport": "0.1.0",
     "tslib": "^2.3.1"
   },
   "peerDependencies": {
