--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -31,17 +31,17 @@
   },
   "dependencies": {
     "@electron/remote": "^2.0.8",
-    "@plexus-interop/broker": "file:../broker",
-    "@plexus-interop/client": "file:../client",
-    "@plexus-interop/client-api": "file:../client-api",
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/common-api-impl": "file:../common-api-impl",
-    "@plexus-interop/io": "file:../io",
-    "@plexus-interop/metadata": "file:../metadata",
-    "@plexus-interop/protocol": "file:../protocol",
-    "@plexus-interop/remote": "file:../remote",
-    "@plexus-interop/transport-common": "file:../transport-common",
-    "@plexus-interop/websocket-transport": "file:../websocket-transport",
+    "@plexus-interop/broker": "0.1.0",
+    "@plexus-interop/client": "0.1.0",
+    "@plexus-interop/client-api": "0.1.0",
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/common-api-impl": "0.1.0",
+    "@plexus-interop/io": "0.1.0",
+    "@plexus-interop/metadata": "0.1.0",
+    "@plexus-interop/protocol": "0.1.0",
+    "@plexus-interop/remote": "0.1.0",
+    "@plexus-interop/transport-common": "0.1.0",
+    "@plexus-interop/websocket-transport": "0.1.0",
     "@types/long": "^4.0.0",
     "chai": "^4.1.0",
     "core-js": "^3.22.4",
