--- a/web/packages/metadata/package.json
+++ b/web/packages/metadata/package.json
@@ -23,9 +23,9 @@
     "test": "npm run unit"
   },
   "dependencies": {
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/protocol": "file:../protocol",
-    "@plexus-interop/remote": "file:../remote"
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/protocol": "0.1.0",
+    "@plexus-interop/remote": "0.1.0"
   },
   "peerDependencies": {
     "rxjs": "^7.5.4"
