--- a/web/packages/protocol/package.json
+++ b/web/packages/protocol/package.json
@@ -33,7 +33,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/common": "0.1.0",
     "@types/long": "^4.0.0",
     "long": "^4.0.0",
     "protobufjs": "6.11.3"
