--- a/web/packages/remote/package.json
+++ b/web/packages/remote/package.json
@@ -24,7 +24,7 @@
     "test": "npm run unit"
   },
   "dependencies": {
-    "@plexus-interop/common": "file:../common",
+    "@plexus-interop/common": "0.1.0",
     "isomorphic-unfetch": "^3.1.0",
     "tslib": "^2.3.1"
   },
