--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -28,15 +28,15 @@
     "@ngrx/router-store": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
-    "@plexus-interop/broker": "file:../broker",
-    "@plexus-interop/client": "file:../client",
-    "@plexus-interop/client-api": "file:../client-api",
-    "@plexus-interop/common": "file:../common",
-    "@plexus-interop/io": "file:../io",
-    "@plexus-interop/metadata": "file:../metadata",
-    "@plexus-interop/protocol": "file:../protocol",
-    "@plexus-interop/transport-common": "file:../transport-common",
-    "@plexus-interop/websocket-transport": "file:../websocket-transport",
+    "@plexus-interop/broker": "0.1.0",
+    "@plexus-interop/client": "0.1.0",
+    "@plexus-interop/client-api": "0.1.0",
+    "@plexus-interop/common": "0.1.0",
+    "@plexus-interop/io": "0.1.0",
+    "@plexus-interop/metadata": "0.1.0",
+    "@plexus-interop/protocol": "0.1.0",
+    "@plexus-interop/transport-common": "0.1.0",
+    "@plexus-interop/websocket-transport": "0.1.0",
     "arraybuffer-slice": "^0.1.2",
     "bootstrap": "^4.6.0",
     "bootswatch": "^4.1.0",
