--- a/web/packages/protocol/package.json
+++ b/web/packages/protocol/package.json
@@ -35,8 +35,7 @@
   "dependencies": {
     "@plexus-interop/common": "0.1.0",
     "@types/long": "^4.0.0",
-    "long": "^4.0.0",
-    "protobufjs": "6.11.3"
+    "long": "^4.0.0"
   },
   "peerDependencies": {
     "protobufjs": "6.11.3"
