--- a/web/packages/broker/package.json
+++ b/web/packages/broker/package.json
@@ -30,10 +30,10 @@
     "@plexus-interop/metadata": "0.1.0",
     "@plexus-interop/protocol": "0.1.0",
     "@plexus-interop/transport-common": "0.1.0",
+    "broadcast-channel": "^5.1.0",
     "long": "^4.0.0",
     "reflect-metadata": "^0.1.10",
-    "tslib": "^2.3.1",
-    "ya-js-storage": "0.1.4"
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "protobufjs": "6.11.3",
