--- a/web/build.gradle
+++ b/web/build.gradle
@@ -13,11 +13,11 @@ def nodeDistBaseUrl = System.getenv("PLEXUS_BUILD_NODE_DIST_URL") ?: 'https://no
 def npmRegistry = System.env['NPM_REGISTRY']
 def npmEmail = System.env['NPM_AUTH_USER']
 def npmAuth = System.env['NPM_AUTH_TOKEN']
-def customNpmVersion = '6.14.15'
+def customNpmVersion = '10.2.3'
 
 node {
-    version = '14.20.1'
-    npmVersion = customNpmVersion
+    version = '20.10.0'
+    // npmVersion = customNpmVersion
     nodeModulesDir = projectDir
     download = true
     distBaseUrl = nodeDistBaseUrl
