--- a/web/nx.json
+++ b/web/nx.json
@@ -19,5 +19,11 @@
     "lint": {
       "dependsOn": ["^lint"]
     }
+  },
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "namedInputs": {
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
+    "sharedGlobals": [],
+    "production": ["default"]
   }
 }
