--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -49,6 +49,9 @@
     "long": "^4.0.0",
     "protobufjs": "6.11.3"
   },
+  "devDependencies": {
+    "electron": "17.4.0"
+  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "jsdom",
