Upgrade types and infra

--- a/web/package.json
+++ b/web/package.json
@@ -59,7 +59,7 @@
     "@types/jstorage": "^0.3.30",
     "@types/long": "^4.0.0",
     "@types/mocha": "^2.2.43",
-    "@types/node": "^14.11.1",
+    "@types/node": "20.11.7",
     "@types/rx": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
@@ -90,13 +90,13 @@
     "jest": "^27.5.1",
     "jest-jasmine2": "^27.5.1",
     "kill-port": "^1.6.1",
-    "lerna": "^7.1.3",
+    "lerna": "^8.0.2",
     "lint-staged": "^12.3.7",
     "minimist": "^1.2.6",
     "mocha": "^9.2.1",
     "mock-socket": "^7.0.0",
     "npm-run-all": "^4.1.5",
-    "nx": "^16.5.1",
+    "nx": "^17.3.0",
     "nyc": "^15.1.0",
     "optimize-plugin": "^1.1.0",
     "path": "^0.12.7",
