--- a/web/package.json
+++ b/web/package.json
@@ -6,8 +6,9 @@
   "description": "Plexus Web Interop root module",
   "scripts": {
     "preinstall": "node ./scripts/replace-lock-registry.js && node ./scripts/replace-auth-vars.js --install",
-    "postinstall": "(is-ci || npm run husky) && node ./scripts/replace-lock-registry.js --backward",
-    "husky": "cd .. && husky install web/.husky",
+    "postinstall": "node ./scripts/replace-lock-registry.js --backward",
+    "prepare": "(is-ci || npm run husky)",
+    "husky": "cd .. && husky web/.husky",
     "prebuild": "lerna exec -- shx rm -rf dist",
     "build": "npm run build-ts && npm run build-bundles",
     "prebuild-ts": "lerna run prebuild --stream",
@@ -83,7 +84,7 @@
     "glob-to-regexp": "^0.4.1",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.0",
-    "husky": "^7.0.4",
+    "husky": "^9.0.7",
     "if-env": "^1.0.4",
     "installing": "^1.0.0",
     "is-ci": "^3.0.1",
