--- a/web/packages/electron-launcher/package.json
+++ b/web/packages/electron-launcher/package.json
@@ -15,7 +15,7 @@
     "build:main": "tsc",
     "test": "npm run unit",
     "unit": "jest --coverage --passWithNoTests",
-    "gen-launcher-js": "pbjs --force-long -t static-module -r launcher -w commonjs -o src/launcher/gen/plexus-messages.js -p ../../../dsl/interop-lang/src/main/resources/interop/ app_launcher_service.proto app_launch_mode.proto unique_id.proto",
+    "gen-launcher-js": "pbjs --force-long -t static-module -r launcher -w commonjs -o src/launcher/gen/plexus-messages.js -p ../../../dsl/interop-lang/src/main/resources ../../../dsl/interop-lang/src/main/resources/interop/app_launcher_service.proto",
     "gen-launcher-ts": "pbts --force-long -o src/launcher/gen/plexus-messages.d.ts src/launcher/gen/plexus-messages.js",
     "gen-launcher-protocol": "npm run gen-launcher-js && npm run gen-launcher-ts",
     "build-binary": "npx electron-packager ./ ElectronAppLauncher --overwrite --out=../../../bin/win-x86/samples/greeting/apps --no-prune",
@@ -42,8 +42,8 @@
     "@plexus-interop/websocket-transport": "1.0.0",
     "loglevel": "^1.4.1",
     "minimist": "^1.2.0",
-    "protobufjs": "7.1.2",
-    "protobufjs-cli": "1.0.2",
+    "protobufjs": "^7.2.6",
+    "protobufjs-cli": "^1.1.2",
     "rxjs": "^7.5.4",
     "strip-bom": "^3.0.0",
     "ws": "^3.2.0"
