--- a/web/packages/web-example/package.json
+++ b/web/packages/web-example/package.json
@@ -28,6 +28,6 @@
     "@plexus-interop/common": "1.0.0",
     "@plexus-interop/transport-common": "1.0.0",
     "@plexus-interop/websocket-transport": "1.0.0",
-    "protobufjs": "7.1.2"
+    "protobufjs": "^7.2.6"
   }
 }
