--- a/web/package.json
+++ b/web/package.json
@@ -102,8 +102,8 @@
     "optimize-plugin": "^1.1.0",
     "path": "^0.12.7",
     "prettier": "^2.5.1",
-    "protobufjs": "6.11.3",
-    "protobufjs-cli": "1.0.2",
+    "protobufjs": "^7.2.6",
+    "protobufjs-cli": "^1.1.2",
     "prr": "1.0.1",
     "renamer": "^2.0.1",
     "shx": "^0.3.4",
