--- a/web/packages/broker/package.json
+++ b/web/packages/broker/package.json
@@ -32,7 +32,7 @@
     "@plexus-interop/transport-common": "1.0.0",
     "broadcast-channel": "^5.1.0",
     "long": "^4.0.0",
-    "protobufjs": "7.1.2",
+    "protobufjs": "^7.2.6",
     "reflect-metadata": "^0.1.10",
     "tslib": "^2.3.1",
     "ya-js-storage": "0.1.4"
