--- a/web/packages/client/package.json
+++ b/web/packages/client/package.json
@@ -35,7 +35,7 @@
     "@types/long": "^4.0.0",
     "loglevel": "^1.4.1",
     "long": "^4.0.0",
-    "protobufjs": "7.1.2",
+    "protobufjs": "^7.2.6",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^7.5.4",
     "tslib": "^2.3.1",
