--- a/web/packages/e2e/package.json
+++ b/web/packages/e2e/package.json
@@ -47,7 +47,7 @@
     "core-js": "^3.22.4",
     "is-electron-renderer": "^2.0.1",
     "long": "^4.0.0",
-    "protobufjs": "7.1.2"
+    "protobufjs": "^7.2.6"
   },
   "devDependencies": {
     "electron": "17.4.0"
