--- a/web/packages/io/package.json
+++ b/web/packages/io/package.json
@@ -27,7 +27,7 @@
     "@plexus-interop/common": "1.0.0",
     "@plexus-interop/metadata": "1.0.0",
     "@plexus-interop/protocol": "1.0.0",
-    "protobufjs": "7.1.2"
+    "protobufjs": "^7.2.6"
   },
   "publishConfig": {
     "access": "public"
