--- a/web/packages/protocol/package.json
+++ b/web/packages/protocol/package.json
@@ -36,7 +36,7 @@
     "@plexus-interop/common": "1.0.0",
     "@types/long": "^4.0.0",
     "long": "^4.0.0",
-    "protobufjs": "7.1.2"
+    "protobufjs": "^7.2.6"
   },
   "publishConfig": {
     "access": "public"
