--- a/web/packages/transport-common/package.json
+++ b/web/packages/transport-common/package.json
@@ -28,7 +28,7 @@
     "@types/long": "^4.0.0",
     "loglevel": "^1.4.1",
     "long": "^4.0.0",
-    "protobufjs": "7.1.2",
+    "protobufjs": "^7.2.6",
     "reflect-metadata": "^0.1.10",
     "tslib": "^2.3.1",
     "typescript-collections": "1.2.3"
