--- a/web/packages/websocket-transport/package.json
+++ b/web/packages/websocket-transport/package.json
@@ -27,7 +27,7 @@
     "@plexus-interop/protocol": "1.0.0",
     "@plexus-interop/transport-common": "1.0.0",
     "long": "^4.0.0",
-    "protobufjs": "7.1.2",
+    "protobufjs": "^7.2.6",
     "reflect-metadata": "^0.1.10",
     "tslib": "^2.3.1"
   },
