--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -73,7 +73,9 @@
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-webpack": "^5.0.0",
-    "protractor": "~7.0.0"
+    "protractor": "~7.0.0",
+    "ts-node": "~3.2.0",
+    "typescript": "~4.4.2"
   },
   "jest": {
     "preset": "jest-preset-angular",
