Update studio to angular 16/ts 4.9

--- a/web/packages/studio/angular.json
+++ b/web/packages/studio/angular.json
@@ -75,10 +75,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
+            "main": "setup-jest.ts",
             "karmaConfig": "./karma.conf.js",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
+            "tsConfig": "tsconfig.spec.json",
             "scripts": [],
             "styles": [
               "bootswatch/dist/yeti/bootstrap.min.css",
@@ -111,7 +111,6 @@
       }
     }
   },
-  "defaultProject": "plexus-studio",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
@@ -119,9 +118,15 @@
     },
     "@schematics/angular:directive": {
       "prefix": "app"
+    },
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
     }
   },
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
