--- a/web/packages/studio/e2e/.eslintrc.json
+++ b/web/packages/studio/e2e/.eslintrc.json
@@ -7,7 +7,7 @@
       "parserOptions": {
         "project": [
           "e2e/tsconfig.app.json",
-          "e2e/tsconfig.spec.json",
+          "tsconfig.spec.json",
           "e2e/e2e/tsconfig.json"
         ],
         "createDefaultProgram": true
