--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -14,20 +14,20 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^13.2.2",
-    "@angular/common": "^13.2.2",
-    "@angular/compiler": "^13.2.2",
-    "@angular/core": "^13.2.2",
-    "@angular/forms": "^13.2.2",
-    "@angular/localize": "^13.2.2",
-    "@angular/platform-browser": "^13.2.2",
-    "@angular/platform-browser-dynamic": "^13.2.2",
-    "@angular/router": "^13.2.2",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
-    "@ngrx/effects": "^13.2.0",
-    "@ngrx/router-store": "^13.2.0",
-    "@ngrx/store": "^13.2.0",
-    "@ngrx/store-devtools": "^13.2.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/localize": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@ngrx/effects": "^16.3.0",
+    "@ngrx/router-store": "^16.3.0",
+    "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^16.3.0",
     "@plexus-interop/broker": "1.0.0",
     "@plexus-interop/client": "1.0.0",
     "@plexus-interop/client-api": "1.0.0",
@@ -37,9 +37,10 @@
     "@plexus-interop/protocol": "1.0.0",
     "@plexus-interop/transport-common": "1.0.0",
     "@plexus-interop/websocket-transport": "1.0.0",
+    "@popperjs/core": "^2.11.8",
     "arraybuffer-slice": "^0.1.2",
-    "bootstrap": "^4.6.0",
-    "bootswatch": "^4.1.0",
+    "bootstrap": "^5.2.0",
+    "bootswatch": "^5.3.0",
     "core-js": "^3.22.4",
     "font-awesome": "^4.7.0",
     "redux": "^3.7.2",
@@ -47,22 +48,24 @@
     "rxjs": "^7.5.4",
     "tslib": "^2.3.1",
     "typescript-collections": "1.2.3",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.3",
-    "@angular-eslint/builder": "^13.0.1",
-    "@angular-eslint/eslint-plugin": "^13.0.1",
-    "@angular-eslint/eslint-plugin-template": "^13.0.1",
-    "@angular-eslint/schematics": "^13.0.1",
-    "@angular-eslint/template-parser": "^13.0.1",
-    "@angular/cli": "^13.2.3",
-    "@angular/compiler-cli": "^13.2.2",
-    "@angular/language-service": "^13.2.2",
-    "jasmine-core": "~2.6.2",
+    "@angular-devkit/build-angular": "^16.2.12",
+    "@angular-eslint/builder": "^16.3.1",
+    "@angular-eslint/eslint-plugin": "^16.3.1",
+    "@angular-eslint/eslint-plugin-template": "^16.3.1",
+    "@angular-eslint/schematics": "^16.3.1",
+    "@angular-eslint/template-parser": "^16.3.1",
+    "@angular/cli": "^16.2.12",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
+    "@types/jest": "^29.5.12",
+    "jasmine-core": "^3.8.0",
     "jasmine-reporters": "^2.2.0",
     "jasmine-spec-reporter": "~4.1.0",
-    "jest-preset-angular": "^11.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.0.3",
     "karma": "^6.3.17",
     "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "~1.0.1",
@@ -75,7 +78,7 @@
     "karma-webpack": "^5.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~3.2.0",
-    "typescript": "~4.4.2"
+    "typescript": "~5.1.6"
   },
   "jest": {
     "preset": "jest-preset-angular",
