--- a/web/packages/studio/tsconfig.json
+++ b/web/packages/studio/tsconfig.json
@@ -7,10 +7,11 @@
     "declaration": false,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "target": "es2015",
+    "target": "ES2022",
     "types": ["jest"],
     "lib": ["es2015", "dom"],
     "module": "es2020",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "useDefineForClassFields": false
   }
 }
